# huggingface_exercise

./: LICENSE  pyproject.toml
src/practice/: jpeg_practice.py  jpg_practice.py
